<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_bg"
    tools:context="code.dashboard.booking.SelectAddressActivity"
    android:orientation="vertical">

    <include layout="@layout/inflate_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/rectangular_border_grey"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:maxLines="4"
                android:maxLength="100"
                android:padding="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etLandmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/rectangular_border_grey"
                android:hint="@string/landmark"
                android:inputType="textPostalAddress"
                android:maxLines="4"
                android:maxLength="100"
                android:padding="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/rectangular_border_grey"
                android:hint="@string/pincode"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/rectangular_border_grey"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etAltMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/rectangular_border_grey"
                android:hint="@string/alternateMobile"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etIdNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/rectangular_border_grey"
                android:hint="@string/aadhaarPanDl"
                android:inputType="text"
                android:maxLength="25"
                android:padding="@dimen/_10sdp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notificationMessage"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_13sdp"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCheckBox"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_uncheck_box"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreeConsentForm"
                    android:textColor="@color/textLight"
                    android:textSize="@dimen/_13sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continuee"
                android:textAllCaps="false"
                android:background="@drawable/btn_rectangular"
                android:textSize="@dimen/_13sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>