<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_bg"
    android:orientation="vertical"
    tools:ignore="SpUsage"
    tools:context="code.basic.OtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otpVerification"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/textDark"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@mipmap/v2_home_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pleaseEnterOtpSentAt"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/textDark"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_30sdp" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/rectangular_border_grey"
        android:hint="@string/otp"
        android:inputType="number"
        android:maxLength="5"
        android:padding="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/resend"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tvOtpTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="visible"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_15sdp" />

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/btn_rectangular"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"/>

</LinearLayout>