<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpUsage"
    android:background="@drawable/rectangular_top_radius"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revertApplyProcess"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_18sdp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/textDark"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonStyleTextColorGrey"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_rectangular"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/btnRevert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_rectangular"
            android:text="@string/revert"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

</LinearLayout>