<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="code.basic.LoginActivity">

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@mipmap/amtz_logo" />

        <ImageView
            android:id="@+id/iv2"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_below="@+id/iv1"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/v2_home_logo" />


        <RelativeLayout
            android:id="@+id/rlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv2"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/rectangular_border_grey"
            android:padding="@dimen/_10sdp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="100" />

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_check" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlEmail"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/rectangular_border_grey"
            android:padding="@dimen/_10sdp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="50" />

            <ImageView
                android:id="@+id/ivPassword"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_eye_visible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlRemember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlPassword"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp">

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="@dimen/_20sdp"
                android:visibility="gone"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toEndOf="@+id/cbRemember"
                android:layout_toRightOf="@+id/cbRemember"
                android:text="@string/rememberMe"
                android:textColor="@color/textDark"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/forgotPasswordQ"
                android:textColor="@color/textLight"
                android:textSize="@dimen/_13sdp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlRemember"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/rectangular_border_grey"
            android:text="@string/signIn"
            android:backgroundTint="@color/colorPrimary"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:id="@+id/liBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignIn"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/dontHaveAccount"
                android:textColor="@color/textLight"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvCreateNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/createNewOne"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>


    </RelativeLayout>


</ScrollView>
